1.重新封装hikyuu指标函数 2.修改web页面卡死问题：脚本执行输出信息未能及时取出